first attempt at iphone X
just first two pages are supposed to be responsive to the iphone X

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+<!Doctype=HTML>
+
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0 viewport-fit=cover">
         
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/queries-desktop.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/queries-mobile.css">
         <title>Christian Wagoner Portfolio</title>
     </head>
  
