final mobile rough commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li  class="col-xs-1" id="about"><a href="#aboutUs">About Us</a></li>
                         <li  class="col-xs-1" id="works"><a href="#howItWorks">How It Works</a></li>
                         <li  class="col-xs-1" id="order"><a href="https://tiedyetendencies.square.site" target="_blank">Place Order</a></li>
-                        <li  class="col-xs-1" id="gallery"><a href="#products">Gallery</a></li>
+                        <li  class="col-xs-1" id="gallery"><a href="#products">Products</a></li>
                         <li  class="col-xs-1" id="colors"><a href="#colors-section">Colors</a></li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                         Like our work? Want to stay up to date with our latest creations? Join our page on Facebook to stay up to date on everything we offer!
                         <br>
                         <br> 
-                        <a href="#">Facebook</a>
+                        <a href="https://www.facebook.com/groups/1153623058155229/" target="_blank">Facebook</a>
                     </p>
                 </div> 
             </div>
