alt id and new nav font

--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
                 
                 <div class="row">
                     <div class="product-item">
-                        <img src="resources/img/tops/traditional%20spiral%20dye.jpg">
+                        <img src="resources/img/tops/traditional%20spiral%20dye.jpg" alt="traditional spiral dye">
                         <span class="product-title">Traditional Spiral Dye Short Sleeve T-Shirt</span>
                         <span class="product-price">$12.00 - $15.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/traditional-spiral-dye-short-sleeve-t-shirt/2?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/tops/mirror%20dye.jpg">
+                        <img src="resources/img/tops/mirror%20dye.jpg" alt="mirror dye">
                         <span class="product-title">Mirror Dye Long Sleeve T-Shirt</span>
                         <span class="product-price">$12.00 - $15.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/mirror-dye-long-sleeve-t-shirt/3?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/tops/double%20dye.jpg">
+                        <img src="resources/img/tops/double%20dye.jpg" alt="double dye">
                         <span class="product-title">Double Dye Short Sleeve T-Shirt</span>
                         <span class="product-price">$12.00 - $15.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/double-dye-t-shirt/4?cs=true" target="_blank">I want this!</a>
@@ -141,7 +141,7 @@
 
                 <div class="row">
                     <div class="product-item">
-                        <img src="resources/img/tops/lazer%20spiral.jpg">
+                        <img src="resources/img/tops/lazer%20spiral.jpg" alt="lazer spiral dye">
                         <span class="product-title">Lazer Spiral Short Sleeve T-Shirt</span>
                         <span class="product-price">$12.00 - $15.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/lazer-spiral-dye/19?cs=true" target="_blank">I want this!</a>
@@ -149,7 +149,7 @@
 
 
                     <div class="product-item">
-                        <img src="resources/img/tops/zip%20up%20hot.jpg">
+                        <img src="resources/img/tops/zip%20up%20hot.jpg" alt="zip up dye">
                         <span class="product-title">Zip the Dye Up Hoodie</span>
                         <span class="product-price">$20.00 - $25.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/zip-the-dye-up-dye/23?cs=true" target="_blank">I want this!</a>
@@ -169,21 +169,21 @@
                 </div>
                 <div class="row">
                     <div class="product-item">
-                        <img src="resources/img/bandanas/mirror%20wave%20bandana.jpg">
+                        <img src="resources/img/bandanas/mirror%20wave%20bandana.jpg" alt="mirror wave bandana">
                         <span class="product-title">Wave Mirror Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/wave-mirror-bandana/12?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/bandanas/traditional%20spiral%20bandana.jpg">
+                        <img src="resources/img/bandanas/traditional%20spiral%20bandana.jpg" alt="traditional spiral bandana">
                         <span class="product-title">Traditional Spiral Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/traditional-spiral-bandana/11?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%202.jpg">
+                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%202.jpg" alt="traditional spiral bandana">
                         <span class="product-title">Traditional Sprial Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/traditional-spiral-bandana/11?cs=true" target="_blank">I want this!</a>
@@ -192,21 +192,21 @@
                 
                 <div class="row">
                     <div class="product-item">
-                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%203.jpg">
+                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%203.jpg" alt="traditional spiral bandana">
                         <span class="product-title">Traditional Spiral Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/traditional-spiral-bandana/11?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%204.jpg">
+                        <img src="resources/img/bandanas/traditional%20spiral%20bandana%204.jpg" alt="traditional spiral bandana">
                         <span class="product-title">Traditional Spiral Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/traditional-spiral-bandana/11?cs=true" target="_blank">I want this!</a>
                     </div>
 
                     <div class="product-item">
-                        <img src="resources/img/bandanas/lazer%20mirror%20bandana.jpg">
+                        <img src="resources/img/bandanas/lazer%20mirror%20bandana.jpg" alt="lazer mirror bandana">
                         <span class="product-title">Lazer Mirror Bandana</span>
                         <span class="product-price">$5.00</span>
                         <a class="want-btn" href="https://tiedyetendencies.square.site/product/lazer-mirror-bandana/10?cs=true" target="_blank">I want this!</a>
